<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rut.taxi.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/pwd_field"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/rg1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="44dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/pwd_field"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Password..."
        android:inputType="textPassword"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/login"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="71dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/reg_btn"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="94dp"
        app:layout_constraintTop_toBottomOf="@+id/pwd_field"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="92dp"
        app:layout_constraintLeft_toRightOf="@+id/login_btn"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="140dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/user"
            android:textSize="15dp"
            tools:ignore="SpUsage" />

        <RadioButton
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="@string/driver"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
